--- a/styles/style.css
+++ b/styles/style.css
@@ -8,34 +8,23 @@ body {
 }
 
 /* Header and Nav Styles*/
-.topHeader .breadcrumb {
-    margin: 0;
-}
 
-header {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    grid-gap: 10px;
-    height: 90px;
-    #padding: 0 5%;
-    background-image: url(../images/DNA.jpg);
-}
-header h1 {
+.imageHeader h1 {
     grid-column: 1 / span 6;
     margin-top: 15px;
     color: white;
 }
-header h1 a:link, header h1 a:visited, header h1 a:hover {
+.imageHeader h1 a:link, .imageHeader h1 a:visited, .imageHeader h1 a:hover {
     font-size: 60px;
     text-decoration: none;
     color: white;
 }
 
-header nav {
+.imageHeader nav {
     grid-column: 7 / span 6;
 }
 
-header nav ul {
+.imageHeader nav ul {
     display: flex;
     justify-content: flex-end;
     list-style-type: none;
@@ -43,11 +32,23 @@ header nav ul {
     margin-top: 30px;
 }
 
-header nav li a:link, header nav li a:hover, header nav li a:visited {
+.imageHeader nav li a:link, .imageHeadernav li a:hover, header nav li a:visited {
     font-size: 2.0em;
     color: white;
     text-decoration: none;
     padding: 0 2em;
+}
+
+.breadcrumb {
+    margin: 0;
+}
+
+.imageHeader {
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    grid-gap: 10px;
+    height: 100px;
+    background-image: url(../images/DNA.jpg);
 }
 
 .subHeader {
@@ -123,14 +124,12 @@ header nav li a:link, header nav li a:hover, header nav li a:visited {
 .container ul {
     background-color: white;
 }
-.dataTable{
-    background-color: #fff;
-    overflow: auto;
-    max-width: 1200px;
-    width: 100%;
-    height: 90%;
-    max-height: 700px;
-}
+
+
+
+
+
+
 
 tr, td {
     border-style: dashed;
