--- a/styles/style.css
+++ b/styles/style.css
@@ -142,7 +142,8 @@ body {
 }
 
 .abstract {
-    grid-column: 3 / span 12;
+    margin:10px;
+    grid-column: 4 / span 12;
 }
 
 .informationOfGene{
