--- a/templates/index.html
+++ b/templates/index.html
@@ -1,97 +1,52 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Bio_test</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.css">
-    <link rel="stylesheet" type="text/css" href="https://handsontable.com/static/css/main.css">
-    <script src="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+{% extends 'base.html' %}
 
-    <link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
-    <link href="styles/style.css" rel="stylesheet">
-      
-  </head>
+{% block content%}
+<!-- Main Content Area-->
+<main class = "home">
+  <div class = "left_list">
+    <div class = "page_list">
+      <ul class="list-group">
+        <li class="list-group-item"><a href="/">Home</a></li>
+        <li class="list-group-item"><a href="/work">Data Library</a></li>
+        <li class="list-group-item"><a href="/work">Home</a></li>
+        <li class="list-group-item"><a href="/work">Home</a></li>
+        <li class="list-group-item"><a href="/work">Home</a></li>
+      </ul>
+    </div>
+    <div class = "reserved_list">
 
-  <body>
-    <div class = "topHeader">
-            <ul class="breadcrumb">
-              <li><a href="index.html">Home</a> <span class="divider">/</span></li>
-              <li><a href="work.html">Library</a> <span class="divider">/</span></li>
-              <li class="active">Data</li>
-            </ul> 
-        </div>
-        <div class = "imageHeader">
-        <h1>
-            <a href = "index.html">Bio_Test</a>
-        </h1>
-        <nav>
-            <ul>
-                <li><a href = "work.html">WORK </a></li>
-            </ul>
-        </nav>
-        </div>
-        <div class = "subHeader">
-        <p>This is data library</p>
-        </div>
-    <div class = "container">
-    <!-- Main Content Area-->
-    <main class = "home">
-        <div class = "left_list">
-            <div class = "page_list">
-                <ul class="list-group">
-                  <li class="list-group-item"><a href="index.html">Home</a></li>
-                  <li class="list-group-item"><a href="work.html">Data Library</a></li>
-                  <li class="list-group-item"><a href="work.html">Home</a></li>
-                  <li class="list-group-item"><a href="work.html">Home</a></li>
-                  <li class="list-group-item"><a href="work.html">Home</a></li>
-                </ul>
-            </div>
-            <div class = "reserved_list">
-                
-                <p>
-                    In version 3.6 (June 2015), 1451 new content values for lignans have been added to the database.
-                </p>
-            </div>
-            
-        </div>   
-    
+      <p>
+        In version 3.6 (June 2015), 1451 new content values for lignans have been added to the database.
+      </p>
+    </div>
 
-         <div class="about">   
-            <h2>
-                Introduction
-            </h2>
-            <p>
-            Online since 1998, CAZy is a specialist database dedicated to the display and analysis of genomic, structural and biochemical information on Carbohydrate-Active Enzymes (CAZymes).
-            
-            CAZy data are accessible either by browsing sequence-based families or by browsing the content of genomes in carbohydrate-active enzymes. New genomes are added regularly shortly after they appear in the daily releases of GenBank. New families are created based on published evidence for the activity of at least one member of the family and all families are regularly updated, both in content and in description.
-            
-            CAZy data are accessible either by browsing sequence-based families or by browsing the content of genomes in carbohydrate-active enzymes. New genomes are added regularly shortly after they appear in the daily releases of GenBank. New families are created based on published evidence for the activity of at least one member of the family and all families are regularly updated, both in content and in description.
-            </p>
-            <div class = "family_list">
-                <h2>
-                    Glycoside Hydrolase family classification
-                </h2>
-                <ul>
-                    <li><a href="index.html">family1</a></li>
-                    <li><a href="index.html">family1</a></li>
-                    <li><a href="index.html">family1</a></li>
-                </ul> 
-            
-        </div>  
+  </div>   
 
-        </div>  
 
-    </main>
-  </div> <!-- This Closes the container -->
-    
-      <footer>
-          <ul>
-              <li><a href="mailto:yhe@huskers.unl.edu">Email</a></li>
-              <li><a href="yhe@huskers.unl.edu">gitHub</a></li>
+  <div class="about">   
+    <h2>
+      Introduction
+    </h2>
+    <p>
+      Online since 1998, CAZy is a specialist database dedicated to the display and analysis of genomic, structural and biochemical information on Carbohydrate-Active Enzymes (CAZymes).
 
-          </ul>
-          <p>&copy; 2020 <a href = "index.html">YinchaoHe</a></p>
-      </footer>
-  </body>
-</html> 
+      CAZy data are accessible either by browsing sequence-based families or by browsing the content of genomes in carbohydrate-active enzymes. New genomes are added regularly shortly after they appear in the daily releases of GenBank. New families are created based on published evidence for the activity of at least one member of the family and all families are regularly updated, both in content and in description.
+
+      CAZy data are accessible either by browsing sequence-based families or by browsing the content of genomes in carbohydrate-active enzymes. New genomes are added regularly shortly after they appear in the daily releases of GenBank. New families are created based on published evidence for the activity of at least one member of the family and all families are regularly updated, both in content and in description.
+    </p>
+    <div class = "family_list">
+      <h2>
+        Glycoside Hydrolase family classification
+      </h2>
+      <ul>
+        <li><a href="/">family1</a></li>
+        <li><a href="/">family1</a></li>
+        <li><a href="/">family1</a></li>
+      </ul> 
+
+    </div>  
+
+  </div>  
+
+</main>
+{% endblock %}
