--- a/templates/work.html
+++ b/templates/work.html
@@ -1,74 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Bio_test</title>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.css">
-    <link rel="stylesheet" type="text/css" href="https://handsontable.com/static/css/main.css">
-    <script src="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.js"></script>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+{% extends 'base.html' %}
 
-    <link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
-    <link href="styles/style.css" rel="stylesheet">
-    <script src="scripts/main.js" defer></script>
+{% block content%}
+<div class = "abstractOfPage">
+  <div class = "cList">
+    <ul>
+      <li>P42106<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a>
+      </li>
+      <li>P76113<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
+      <li>M9NZ71<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
+      <li>H3JYE4<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
+      <li>P32106<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
+    </ul>
+  </div>
+  <div class = "abstract">
+    <p>The 155 foods with retention factor data are classified in 7 classes and 32 sub-classes. Use the text-boxes below to filter on food before process, food after process, process, yield factor, and the number of associated compounds and retention factor data. Use the scrolling menu on the left to select one or several food classes or sub-classes.</p>
+  </div>
 
-
-
-
-  </head>
-
-  <body>
-        <div class = "topHeader">
-            <ul class="breadcrumb">
-              <li><a href="index.html">Home</a> <span class="divider">/</span></li>
-              <li><a href="work.html">Library</a> <span class="divider">/</span></li>
-              <li class="active">Data</li>
-            </ul> 
-        </div>
-        <div class = "imageHeader">
-        <h1>
-            <a href = "index.html">Bio_Test</a>
-        </h1>
-        <nav>
-            <ul>
-                <li><a href = "work.html">WORK </a></li>
-            </ul>
-        </nav>
-        </div>
-        <div class = "subHeader">
-        <p>This is data library</p>
-        </div>
-      <div class = "abstractOfPage">
-        <div class = "cList">
-            <ul>
-                <li>P42106<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a>
-                </li>
-                <li>P76113<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
-                <li>M9NZ71<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
-                <li>H3JYE4<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
-                <li>P32106<span class="divider">/</span><a href = "extendSwissData.html">Swissport</a><span class="divider">/</span><a href = "extendSwissData.html">EML</a></li>
-            </ul>
-        </div>
-        <div class = "abstract">
-                <p>The 155 foods with retention factor data are classified in 7 classes and 32 sub-classes. Use the text-boxes below to filter on food before process, food after process, process, yield factor, and the number of associated compounds and retention factor data. Use the scrolling menu on the left to select one or several food classes or sub-classes.</p>
-        </div>
-
-      </div>
-      <ul class="breadcrumb">
-              <li><a href="index.html">Characterize</a> <span class="divider">/</span></li>
-              <li>Swissport<span class="divider">/</span></li>
-              <li class="active">EML</li>
-            </ul> 
-        <div id = "hot"></div>
-        
-
-      <footer>
-          <ul>
-              <li><a href="mailto:yhe@huskers.unl.edu">Email</a></li>
-              <li><a href="yhe@huskers.unl.edu">gitHub</a></li>
-
-          </ul>
-          <p>&copy; 2020 <a href = "index.html">YinchaoHe</a></p>
-      </footer>
-  </body>
-</html> 
+</div>
+<ul class="breadcrumb">
+  <li><a href="index.html">Characterize</a> <span class="divider">/</span></li>
+  <li>Swissport<span class="divider">/</span></li>
+  <li class="active">EML</li>
+</ul> 
+<div id = "hot"></div>
+{% endblock %}
