--- a/templates/base.html
+++ b/templates/base.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Bio_test</title>
+	<title>{%block title%} {% endblock%} - {{config['title']}}</title>
 	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.css">
 	<link rel="stylesheet" type="text/css" href="https://handsontable.com/static/css/main.css">
 	<script src="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.js"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-
 	<link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
 	<link href="styles/style.css" rel="stylesheet">
 
@@ -22,7 +21,7 @@
 	</div>
 	<div class = "imageHeader">
 		<h1>
-			<a href = "index.html">Bio_Test</a>
+			<a href = "index.html">{{config['title']}}</a>
 		</h1>
 		<nav>
 			<ul>
