--- a/templates/base.html
+++ b/templates/base.html
@@ -1,48 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>{%block title%} {% endblock%} - {{config['title']}}</title>
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.css">
-	<link rel="stylesheet" type="text/css" href="https://handsontable.com/static/css/main.css">
-	<script src="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.js"></script>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-	<link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
-	<link href="styles/style.css" rel="stylesheet">
-
-</head>
+{% include '_head.html'%}
 <body>
-	<div class = "topHeader">
-		<ul class="breadcrumb">
-			<li><a href="index.html">Home</a> <span class="divider">/</span></li>
-			<li><a href="work.html">Library</a> <span class="divider">/</span></li>
-			<li class="active">Data</li>
-		</ul> 
-	</div>
-	<div class = "imageHeader">
-		<h1>
-			<a href = "index.html">{{config['title']}}</a>
-		</h1>
-		<nav>
-			<ul>
-				<li><a href = "work.html">WORK </a></li>
-			</ul>
-		</nav>
-	</div>
-	<div class = "subHeader">
-		<p>This is data library</p>
-	</div>
-	<div class = "container">
+	{% include '_header.html' %}
+	<div class="container">
+		<div class = "imageHeader">
+			<h1>
+				<a href = "index.html">{{config['title']}}</a>
+			</h1>
+			<nav>
+				<ul>
+					<li><a href = "work.html">WORK</a></li>
+				</ul>
+			</nav>
+		</div>
+		<div class = "subHeader">
+			<p>This is data library</p>
+		</div>
 		{% block content %}{% endblock %}
-	</div> <!-- This Closes the container -->
-
-	<footer>
-		<ul>
-			<li><a href="mailto:yhe@huskers.unl.edu">Email</a></li>
-			<li><a href="yhe@huskers.unl.edu">gitHub</a></li>
-
-		</ul>
-		<p>&copy; 2020 <a href = "index.html">YinchaoHe</a></p>
-	</footer>
+	</div>
+	{% include '_footer.html' %}
 </body>
 </html> 
