--- a/templates/_head.html
+++ b/templates/_head.html
@@ -1,15 +1,19 @@
 <head>
 	<meta charset="utf-8">
 	<title>{{config['title']}}</title>
-	<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.css">
-	<link rel="stylesheet" type="text/css" href="https://handsontable.com/static/css/main.css">
-	<script src="https://cdn.jsdelivr.net/npm/handsontable@latest/dist/handsontable.full.min.js"></script>
-
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<!-- Latest compiled and minified JavaScript -->
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 
 	<link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
-	<link href="styles/style.css" rel="stylesheet">
+	<link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet">
+	<style type="text/css">
+		.container-fluid{
+			margin-left:1em;
+			margin-right:1em;
+		}
+	</style>
 </head>
