--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,7 +1,15 @@
-<footer>
-	<ul>
-		<li><a href="mailto:yhe@huskers.unl.edu">Email</a></li>
-		<li><a href="yhe@huskers.unl.edu">gitHub</a></li>
-	</ul>
-	<p>&copy; 2020 <a href = "index.html">YinchaoHe</a></p>
-</footer>
+<div class="container-fluid">
+	<div class="row">
+		<div class="col-lg-4">
+			<ul>
+				<li><a href="mailto:yhe@huskers.unl.edu">Email</a></li>
+				<li><a href="yhe@huskers.unl.edu">GitHub</a></li>
+			</ul>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-lg-12">
+			<p class="text-center">&copy; 2020 <a href = "index.html">YinchaoHe</a></p>
+		</div>
+	</div>
+</div>
