change the templates to decorate data

--- a/templates/_footer.html
+++ b/templates/_footer.html
@@ -1,15 +1,9 @@
 <div class="container-fluid">
-	<div class="row">
-		<div class="col-lg-4">
-			<ul>
-				<li><a href="mailto:yhe@huskers.unl.edu">Email</a></li>
-				<li><a href="yhe@huskers.unl.edu">GitHub</a></li>
-			</ul>
-		</div>
-	</div>
+	<hr>
 	<div class="row">
 		<div class="col-lg-12">
 			<p class="text-center">&copy; 2020 <a href = "index.html">YinchaoHe</a></p>
+			<p class="text-center"><a href="mailto:yhe@huskers.unl.edu">Email</a> | <a href="yhe@huskers.unl.edu">GitHub</a></p>
 		</div>
 	</div>
 </div>
