--- a/templates/base.html
+++ b/templates/base.html
@@ -7,5 +7,10 @@
 		{% block content %}{% endblock %}
 	</div>
 	{% include '_footer.html' %}
+	<script type="text/javascript">
+		$(document).ready(function() {
+    		$('#data-table').DataTable();
+		} );
+	</script>
 </body>
 </html> 
