--- a/templates/characteristic.html
+++ b/templates/characteristic.html
@@ -37,11 +37,13 @@
 	<td>{{record.vmax}}</td>
 	<td>{{record.kcat}}</td>
 	<td>{{record.doi}}</td>
-	<td>{{record.family}}</td>
+	<td><button id="123" name="famliy_link" >{{record.family}}</button></td>
 	<td>{{record.seq}}</td>
       </tr>
     {% endfor %}
   </tbody>
-
 </table>
+      
 {% endblock %}
+
+
