--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <div class = "page_list">
       <ul class="list-group">
         <li class="list-group-item"><a href="/">Home</a></li>
-        <li class="list-group-item"><a href="/work">Data Library</a></li>
+        <li class="list-group-item"><a href="/characteristic">Data Library</a></li>
         <li class="list-group-item"><a href="/work">Home</a></li>
         <li class="list-group-item"><a href="/work">Home</a></li>
         <li class="list-group-item"><a href="/work">Home</a></li>
