--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,27 @@
 	</div>
 	{% include '_footer.html' %}
 	<script type="text/javascript">
-		$(document).ready(function() {
-    		$('#data-table').DataTable();
-		} );
+	$(document).ready(function() {
+	    $('#data-table').DataTable( {
+	        dom: 'Bfrtip',
+	        buttons: [
+	            'copy',
+	            'csv',
+	            'excel',
+	            'pdf',
+	            {
+	                extend: 'print',
+	                text: 'Print all (not just selected)',
+	                exportOptions: {
+	                    modifier: {
+	                        selected: null
+	                    }
+	                }
+	            }
+	        ],
+	        select: true
+	    } );
+	} );
 	</script>
 </body>
 </html> 
