modify navbar, add new template detail.html, and modify route

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -2,7 +2,9 @@
 	<div class="container-fluid">
 		<ul class="nav navbar-nav">
 			<li><a href="/">Home</a></li>
-			<li><a href="/characteristic">Library</a></li>
+			<li><a href="/characteristic">Characterize</a></li>
+            <li><a href="/swissport/all">Swissprot</a></li>
+            <li><a href="/trembl/all">treMBL</a></li>
 		</ul>
 	</div>
 </nav>
