--- a/templates/_head.html
+++ b/templates/_head.html
@@ -1,55 +1,59 @@
 <head>
-	<meta charset="utf-8">
-	<title>{{config['title']}}</title>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-	
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js" integrity="sha256-L4cf7m/cgC51e7BFPxQcKZcXryzSju7VYBKJLOKPHvQ=" crossorigin="anonymous"></script>
+    <meta charset="utf-8">
+    <title>{{ config['title'] }}</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 
-	<script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.20/js/jquery.dataTables.min.js"
+            integrity="sha256-L4cf7m/cgC51e7BFPxQcKZcXryzSju7VYBKJLOKPHvQ=" crossorigin="anonymous"></script>
 
-	<!-- Latest compiled and minified JavaScript -->
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
-	<link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet">
-	<style type="text/css">
-		.container-fluid{
-			margin-left:1em;
-			margin-right:1em;
-		}
-	</style>
-	<script>
-window.onload = init;
+    <script src="https://cdn.datatables.net/1.10.21/js/dataTables.bootstrap.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-function init() {
-        var button = document.querySelectorAll("button");
-        var i;
-	for(i=0; i < button.length; i++) {
-	    var family_number = button[i].innerHTML;
-	    console.log(family_number);
-	    button[i].addEventListener("click", handleButtonClick);
-	    //button[i].onclick = handleButtonClick(family_number);
-	}
-}
-
-function handleButtonClick(family_number) {
-    var data = {}
-    data['family_number'] = family_number 
-    $.ajax(
-      {
-         type: "POST",
-         url: "/characteristic",
-	 data: data,
-	 dataType: "json",         
-         success: function(family_number)
-         {
-             console.log(family_number);
-         },
-         error: function (xhr, status, error) {
-            console.log(error);
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
+            integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+            crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+2&display=swap" rel="stylesheet">
+    <link href="{{ url_for('static', filename='styles/style.css') }}" rel="stylesheet">
+    <style type="text/css">
+        .container-fluid {
+            margin-left: 1em;
+            margin-right: 1em;
         }
-      });
-}
-</script>
+    </style>
+    <script>
+        window.onload = init;
+
+        function init() {
+            var button = document.querySelectorAll("button");
+            var i;
+            for (i = 0; i < button.length; i++) {
+                button[i].addEventListener("click", handleButtonClick);
+                //button[i].onclick = handleButtonClick(family_number);
+            }
+        }
+
+        function handleButtonClick(family_number) {
+            var data = {}
+            data['family_id'] = event.target.innerHTML;
+
+            $.ajax(
+                {
+                    type: "POST",
+                    //url: "/swissport",
+                    url: "/characteristic",
+                    data: JSON.stringify(data),
+                    dataType: "html",
+                    success: function (data) {
+                        $(document.body).html(data);
+                    },
+                    error: function (xhr, status, error) {
+                        console.log(error);
+                    }
+                });
+        }
+    </script>
 </head>
