--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
     <div class = "page_list">
       <ul class="list-group">
         <li class="list-group-item"><a href="/">Home</a></li>
-        <li class="list-group-item"><a href="/characteristic">Data Library</a></li>
-        <li class="list-group-item"><a href="/work">Home</a></li>
-        <li class="list-group-item"><a href="/work">Home</a></li>
-        <li class="list-group-item"><a href="/work">Home</a></li>
+        <li class="list-group-item"><a href="/characteristic">Characterize</a></li>
+        <li class="list-group-item"><a href="/swissport/all">Swissprot</a></li>
+        <li class="list-group-item"><a href="/trembl/all">tremBLE</a></li>
+        <li class="list-group-item"><a href="/">Home</a></li>
       </ul>
     </div>
     <div class = "reserved_list">
