--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -2,7 +2,6 @@
 
 {% block title %} Extend Swiss Data {% endblock %}
 {% block content %}
-
     <h1>
         Family List
     </h1>
@@ -35,6 +34,7 @@
             <th>family</th>
             <th>EC</th>
             <th>Sequence</th>
+            <th hidden></th>
             </ul>
         </thead>
         <tbody>
@@ -47,6 +47,9 @@
                 <td>{{ record.family }}</td>
                 <td>{{ record.ec }}</td>
                 <td>{{ record.seq }}</td>
+                <td>
+                    <p hidden>> Uniq_id={{record.uniq_id}} Seq={{record.seq}}</p>
+                </td>
             </tr>
         {% endfor %}
         </tbody>
