--- a/templates/detail.html
+++ b/templates/detail.html
@@ -5,6 +5,6 @@
     <title>Bio_test</title>
 </head>
 <body>
-    <p> >  Uniq_id={{ unid }}  Seq={{ seq }}</p>
+    <p style="max-width: 50ch; word-wrap:break-word;"> >  {{ unid }}  {{ seq }}</p>
 </body>
 </html>
