--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,15 @@
 	            	exportOptions:{
 	            		columns: [-1]
 	            	}
-	            }
+	            },
+                {
+                    extend: 'copy',
+	            	fieldBoundary: '',
+	            	text: 'copy',
+	            	exportOptions:{
+	            		columns: [-1]
+	            	}
+                }
 	        ],
 	        select: true
 	    } );
