add a route to create the tree diagram && add modify navbar && change the status of seq column

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -16,3 +16,14 @@ html {
 .mt-3 {
     margin-top: 5em;
 }
+
+.breadcrumb a:link {
+    color: blue;
+    text-decoration: none;
+}
+
+.breadcrumb a:hover {
+    color: darkred;
+    text-decoration: underline;
+    text-decoration: none;
+}
