--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -5,6 +5,7 @@
 			<li><a href="/characteristic">Characterize</a></li>
             <li><a href="/swissport/all">Swissprot</a></li>
             <li><a href="/trembl/all">treMBL</a></li>
+            <li><a href="/tree/all">Tree of Life</a></li>
 		</ul>
 	</div>
 </nav>
