--- a/templates/characteristic.html
+++ b/templates/characteristic.html
@@ -50,7 +50,7 @@
                 <a href="{{ url_for('swissport', family_id = record.family) }}">{{ record.family }}</a>
             </td>
             <td>
-                <a href={{ url_for('detail', seq = record.seq, unid = record.uniq_id) }}>view</a>
+                <a href={{ url_for('detail', unid = record.uniq_id) }}>view</a>
             </td>
             <td>
                 <p hidden>> {{record.uniq_id}} {{record.seq}}</p>
