--- a/templates/index.html
+++ b/templates/index.html
@@ -1,28 +1,34 @@
 {% extends 'base.html' %}
 
-{% block title%}Home{% endblock %}
+{% block title %}Home{% endblock %}
 
-{% block content%}
-<!-- Main Content Area-->
-<div class="row">
-  <div class="col-lg-8">
-    {{content|markdown|safe}}
-  </div>
-  <div class = "col-lg-4">
-    <div class = "page_list">
-      <ul class="list-group">
-        <li class="list-group-item"><a href="/">Home</a></li>
-        <li class="list-group-item"><a href="/characteristic">Characterize</a></li>
-        <li class="list-group-item"><a href="/swissport/all">Swissprot</a></li>
-        <li class="list-group-item"><a href="/trembl/all">tremBLE</a></li>
-        <li class="list-group-item"><a href="/">Home</a></li>
-      </ul>
+{% block content %}
+    <!-- Main Content Area-->
+    <div class="row">
+        <div class="page-header">
+            <h3>This is home<small>Subtext for header</small></h3>
+
+        </div>
     </div>
-    <div class = "reserved_list">
-      <p>
-        In version 3.6 (June 2015), 1451 new content values for lignans have been added to the database.
-      </p>
+    <div class="row">
+        <div class="col-lg-8">
+            {{ content|markdown|safe }}
+        </div>
+        <div class="col-lg-4">
+            <div class="page_list">
+                <ul class="list-group">
+                    <li class="list-group-item"><a href="/">Home</a></li>
+                    <li class="list-group-item"><a href="/characteristic">Characterize</a></li>
+                    <li class="list-group-item"><a href="/swissport/all">Swissprot</a></li>
+                    <li class="list-group-item"><a href="/trembl/all">tremBLE</a></li>
+                    <li class="list-group-item"><a href="/">Home</a></li>
+                </ul>
+            </div>
+            <div class="reserved_list">
+                <p>
+                    In version 3.6 (June 2015), 1451 new content values for lignans have been added to the database.
+                </p>
+            </div>
+        </div>
     </div>
-  </div>
-</div>
 {% endblock %}
