--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -5,7 +5,7 @@
     <h1>
         Family List
     </h1>
-    <ul class="breadcrumb">
+    <ul class="breadcrumb" style="font-size: medium">
         <li><a href="{{ url_for('swissport', family_id = 1) }}">1</a> <span class="divider"></span></li>
         <li><a href="{{ url_for('swissport', family_id = 2) }}">2</a> <span class="divider"></span></li>
         <li><a href="{{ url_for('swissport', family_id = 3) }}">3</a> <span class="divider"></span></li>
@@ -21,7 +21,10 @@
                 mutagenesis of B. subtilis>
         </div>
     </div>
-
+    <div class="extend">
+        <h1>Extend Resource </h1>
+        <p> View Tree</p>
+    </div>
 
 
     <table class="table" id="data-table">
@@ -35,7 +38,7 @@
             <th>EC</th>
             <th>Sequence</th>
             <th hidden></th>
-            </ul>
+        </tr>
         </thead>
         <tbody>
         {% for record in records: %}
@@ -46,9 +49,11 @@
                 <td>{{ record.uniq_id }}</td>
                 <td>{{ record.family }}</td>
                 <td>{{ record.ec }}</td>
-                <td>{{ record.seq }}</td>
                 <td>
-                    <p hidden>> Uniq_id={{record.uniq_id}} Seq={{record.seq}}</p>
+                    <a href={{ url_for('detail', unid = record.uniq_id) }}>view</a>
+                </td>
+                <td>
+                    <p hidden>> {{ record.uniq_id }} {{ record.seq }}</p>
                 </td>
             </tr>
         {% endfor %}
