--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -46,9 +46,11 @@
                 <td>{{ record.uniq_id }}</td>
                 <td>{{ record.family }}</td>
                 <td>{{ record.ec }}</td>
-                <td>{{ record.seq }}</td>
                 <td>
-                    <p hidden>> Uniq_id={{record.uniq_id}} Seq={{record.seq}}</p>
+                    <a href={{ url_for('detail', unid = record.uniq_id) }}>view</a>
+                </td>
+                <td>
+                    <p hidden>> {{ record.uniq_id }} {{ record.seq }}</p>
                 </td>
             </tr>
         {% endfor %}
