--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -2,6 +2,7 @@
 	<div class="container-fluid">
 		<ul class="nav navbar-nav">
 			<li><a href="/">Home</a></li>
+            <li><a href="/family/all">Family</a></li>
 			<li><a href="/characteristic">Characterize</a></li>
             <li><a href="/swissport/all">Swissprot</a></li>
             <li><a href="/trembl/all">treMBL</a></li>
