--- a/templates/characteristic.html
+++ b/templates/characteristic.html
@@ -2,6 +2,18 @@
 
 {% block content %}
 <div class="abstractOfPage" style="margin-bottom: 50px">
+    <div class="familyList">
+        <h1>
+            Family List
+        </h1>
+        <ul class="breadcrumb" style="font-size: medium">
+            {% for i in range(40) %}
+                <li><a href="{{ url_for('family', family_id = i + 1) }}">{{ i + 1 }}</a> <span class="divider"></span>
+                </li>
+            {% endfor %}
+
+        </ul>
+    </div>
     <div class="informationOfGene">
         <h1>
             Family Introduction
