--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,18 @@
 
         </div>
     </div>
+    <div class="familyList">
+        <h1>
+            Family List
+        </h1>
+        <ul class="breadcrumb" style="font-size: medium">
+            {% for i in range(40) %}
+                <li><a href="{{ url_for('family', family_id = i + 1) }}">{{ i + 1 }}</a> <span class="divider"></span>
+                </li>
+            {% endfor %}
+
+        </ul>
+    </div>
     <div class="row">
         <div class="col-lg-8">
             {{ content|markdown|safe }}
