--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -3,15 +3,18 @@
 {% block title %} treMBL Data {% endblock %}
 {% block content %}
 
-    <h1>
-        Family List
-    </h1>
-    <ul class="breadcrumb">
-        <li><a href="{{ url_for('trembl', family_id = 1) }}">1</a> <span class="divider"></span></li>
-        <li><a href="{{ url_for('trembl', family_id = 2) }}">2</a> <span class="divider"></span></li>
-        <li><a href="{{ url_for('trembl', family_id = 3) }}">3</a> <span class="divider"></span></li>
+    <div class="familyList">
+        <h1>
+            Family List
+        </h1>
+        <ul class="breadcrumb" style="font-size: medium">
+            {% for i in range(40) %}
+                <li><a href="{{ url_for('family', family_id = i + 1) }}">{{ i + 1 }}</a> <span class="divider"></span>
+                </li>
+            {% endfor %}
 
-    </ul>
+        </ul>
+    </div>
     <div class="abstractOfPage">
         <div class="informationOfGene">
             <h1>
