refine the achor destination

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -3,7 +3,7 @@
 		<ul class="nav navbar-nav">
 			<li><a href="/">Home</a></li>
             <li><a href="/family/all">Family</a></li>
-			<li><a href="/characteristic">Characterize</a></li>
+			<li><a href="/characteristic/all">Characterize</a></li>
             <li><a href="/swissport/all">Swissprot</a></li>
             <li><a href="/trembl/all">treMBL</a></li>
             <li><a href="/tree/all">Tree of Life</a></li>
