--- a/templates/tree.html
+++ b/templates/tree.html
@@ -29,7 +29,7 @@
         </h1>
         <ul class="breadcrumb" style="font-size: medium">
             {% for i in range(40) %}
-                <li><a href="{{ url_for('family', family_id = i + 1) }}">{{ i + 1 }}</a> <span class="divider"></span>
+                <li><a href="{{ url_for('tree', family_id = i + 1) }}">{{ i + 1 }}</a> <span class="divider"></span>
                 </li>
             {% endfor %}
 
