--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -9,7 +9,7 @@
         </h1>
         <ul class="breadcrumb" style="font-size: medium">
             {% for i in range(40) %}
-                <li><a href="{{ url_for('family', family_id = i + 1) }}">{{ i + 1 }}</a> <span class="divider"></span>
+                <li><a href="{{ url_for('trembl', family_id = i + 1) }}">{{ i + 1 }}</a> <span class="divider"></span>
                 </li>
             {% endfor %}
 
