use achor to replace a normal <td> uniq_id

--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -5,7 +5,7 @@
             <li><a href="/family/all">Family</a></li>
 			<li><a href="/characteristic/all">Characterize</a></li>
             <li><a href="/swissport/all">Swissprot</a></li>
-            <li><a href="/trembl/all">treMBL</a></li>
+            <li><a href="/trembl/all">TrEMBL</a></li>
             <li><a href="/tree/all">Tree of Life</a></li>
 		</ul>
 	</div>
