--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -46,7 +46,7 @@
                 <td>{{ record.protein_enzyme }}</td>
                 <td>{{ record.strain }}</td>
                 <td>{{ record.gene_name }}</td>
-                <td>{{ record.uniq_id }}</td>
+                <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}">{{ record.uniq_id }}</a></td>
                 <td>{{ record.family }}</td>
                 <td>{{ record.ec }}</td>
                 <td>
