--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -8,7 +8,8 @@
         </h1>
         <ul class="breadcrumb" style="font-size: medium">
             {% for i in range(40) %}
-                <li><a href="{{ url_for('swissport', family_id = i + 1) }}">{{ i + 1 }}</a> <span class="divider"></span>
+                <li><a href="{{ url_for('swissport', family_id = i + 1) }}">{{ i + 1 }}</a> <span
+                        class="divider"></span>
                 </li>
             {% endfor %}
 
@@ -44,7 +45,7 @@
                 <td>{{ record.protein_enzyme }}</td>
                 <td>{{ record.strain }}</td>
                 <td>{{ record.gene_name }}</td>
-                <td>{{ record.uniq_id }}</td>
+                <td><a href="https://www.uniprot.org/uniprot/{{ record.uniq_id }}">{{ record.uniq_id }}</a></td>
                 <td>{{ record.family }}</td>
                 <td>{{ record.ec }}</td>
                 <td>
