--- a/templates/detail.html
+++ b/templates/detail.html
@@ -3,6 +3,12 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+    <div class="row">
+        <div class="page-header">
+            <h3>This is detail page<small>Subtext for header</small></h3>
+
+        </div>
+    </div>
     <h1 style="max-width: 50ch; word-wrap:break-word;">
         > {{ unid }} {{ seq }}
     </h1>
