--- a/templates/family.html
+++ b/templates/family.html
@@ -3,6 +3,12 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
+    <div class="row">
+        <div class="page-header">
+            <h3>This is family page<small>Subtext for header</small></h3>
+
+        </div>
+    </div>
     <!-- Main Content Area-->
     <div class="familyList">
         <h1>
