--- a/templates/swissport.html
+++ b/templates/swissport.html
@@ -2,6 +2,12 @@
 
 {% block title %} Extend Swiss Data {% endblock %}
 {% block content %}
+    <div class="row">
+        <div class="page-header">
+            <h3>This is swissprot page<small>Subtext for header</small></h3>
+
+        </div>
+    </div>
     <div class="familyList">
         <h1>
             Family List
