--- a/templates/tree.html
+++ b/templates/tree.html
@@ -22,7 +22,12 @@
         }
 
     </style>
+    <div class="row">
+        <div class="page-header">
+            <h3>This is tree page<small>Subtext for header</small></h3>
 
+        </div>
+    </div>
     <div class="familyList">
         <h1>
             Family List
