--- a/templates/trembl.html
+++ b/templates/trembl.html
@@ -2,7 +2,12 @@
 
 {% block title %} treMBL Data {% endblock %}
 {% block content %}
+    <div class="row">
+        <div class="page-header">
+            <h3>This is TrEMBL page<small>Subtext for header</small></h3>
 
+        </div>
+    </div>
     <div class="familyList">
         <h1>
             Family List
