--- a/templates/index.html
+++ b/templates/index.html
@@ -30,10 +30,10 @@
             <div class="page_list">
                 <ul class="list-group">
                     <li class="list-group-item"><a href="/">Home</a></li>
-                    <li class="list-group-item"><a href="/characteristic">Characterize</a></li>
+                    <li class="list-group-item"><a href="/characteristic/all">Characterize</a></li>
                     <li class="list-group-item"><a href="/swissport/all">Swissprot</a></li>
-                    <li class="list-group-item"><a href="/trembl/all">tremBLE</a></li>
-                    <li class="list-group-item"><a href="/">Home</a></li>
+                    <li class="list-group-item"><a href="/trembl/all">TrEMBL</a></li>
+                    <li class="list-group-item"><a href="/tree/all">Tree Of Life</a></li>
                 </ul>
             </div>
             <div class="reserved_list">
