add filter function

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,37 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-{% include '_head.html'%}
+{% include '_head.html' %}
 <body>
-	{% include '_header.html' %}
-	<div class="container-fluid">
-		{% block content %}{% endblock %}
-	</div>
-	{% include '_footer.html' %}
-	<script type="text/javascript">
-	$(document).ready(function() {
-	    $('#data-table').DataTable( {
-	        dom: 'Bfrtip',
-	        buttons: [
-	            {
-	            	extend: 'csvHtml5',
-	            	fieldBoundary: '',
-	            	text: 'export',
-	            	exportOptions:{
-	            		columns: [-1]
-	            	}
-	            },
+{% include '_header.html' %}
+<div class="container-fluid">
+    {% block content %}{% endblock %}
+</div>
+{% include '_footer.html' %}
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('#data-table').DataTable({
+            dom: 'Bfrtip',
+            buttons: [
+                {
+                    extend: 'csvHtml5',
+                    fieldBoundary: '',
+                    text: 'export',
+                    exportOptions: {
+                        columns: [-1]
+                    }
+                },
                 {
                     extend: 'copy',
-	            	fieldBoundary: '',
-	            	text: 'copy',
-	            	exportOptions:{
-	            		columns: [-1]
-	            	}
+                    fieldBoundary: '',
+                    text: 'copy',
+                    exportOptions: {
+                        columns: [-1]
+                    }
+                },
+                {
+                    text: 'All',
+                    action: function () {
+                        location.reload(true);
+                    }
+                },
+                {
+                    text: 'Viruses',
+                    action: function () {
+                        var table = $('#data-table').DataTable();
+                        table.column(4).search('ccc').draw();
+                    }
+                },
+                {
+                    text: 'Archaea',
+                    action: function () {
+                        var table = $('#data-table').DataTable();
+                        table.column(4).search('ccc').draw();
+                    }
                 }
-	        ],
-	        select: true
-	    } );
-	} );
-	</script>
+            ],
+            select: true
+        });
+    });
+
+</script>
 </body>
 </html> 
