add a picture into index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
     </div>
     <div class="row">
         <div class="col-lg-8">
+            <image src="../static/images/seed.svg" width="100%" onclick="window.open('../static/images/seed.pdf')"></image>
             {{ content|markdown|safe }}
         </div>
         <div class="col-lg-4">
