add mention into tree

--- a/templates/tree.html
+++ b/templates/tree.html
@@ -51,10 +51,11 @@
             who went further than Darwin in proposing phylogenic histories of life. In contemporary usage, tree of life
             refers to the compilation of comprehensive phylogenetic databases rooted at the last universal common
             ancestor of life on Earth. The Open Tree of Life, first published September 2015, is a project to compile
-            such a database for free public access.</p>
+            such a database for free publ{c access.</p>
     </div>
 
-    <div id="treeDiagram">
+    <div id="treeDiagram" style="margin-top: 20px">
+        <p>{Before see the tree of life, please choose a family}</p>
     </div>
 
 
